--- a/9.html
+++ b/9.html
@@ -1,54 +1,44 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<title>九宫格</title>
+	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0,minimum-scale=1.0">
+	<style>
+		* {
+			padding: 0;
+			margin: 0;
+		}
+		.box {
+			flex: 1;
+			float: left;
+			margin: 1%;
+			width: 31vw;
+			border-radius: 10px;
+			background-color: #FFA600;
+			
+		}
+		.center {
+			display: flex;
+			flex:1;
+		}
+	</style>
 </head>
-<style>
-	.lottery-draw-container{
-  		position: absolute;
-  		left: 50%;
- 		top: 50%;
-  		transform: translate(-50%,-50%);
- 		 width: 100%;
-  		height: 300px;
-  		/*border: 1px solid #000;*/
-  		display: flex;
-  		flex-direction: column;
-	}
-	.item{
-	  /*display: flex;*/
-	  flex: 1;
-	  /*父级元素定义display:flex,子元素宽度用flex来定义,flex:1 是均分父级元素。占的比例相同*/
-	  /*justify-content : center;元素在主轴（页面）上居中排列*/
-	  justify-content:center;
-	  align-items: center;
-	  margin: 1%;
-	  height: 30vw;
-	  width: 30vw;
-	  background-color: #FFA600;
-	  border-radius: 10px;
-	}
-
- 
-</style>
-<body>
-	<div class="lottery-draw-container">
-  		<div style="display: flex;flex:1;">
-   		 	<div class="item"></div>
-    		<div class="item"></div>
-    		<div class="item"></div>
-  		</div>
-  		<div style="display: flex;flex:1;">
-    		<div class="item"></div>
-    		<div class="item"></div>
-    		<div class="item"></div>
-  		</div>
-  		<div style="display: flex;flex:1;">
-   			<div class="item"></div>
-   			<div class="item"></div>
-   		 	<div class="item"></div>
-  		</div>
-</div>
+<body >
+	<div class="center">
+		<div class="box"></div>
+		<div class="box"></div>
+		<div class="box"></div>
+	</div>
+	<div class="center">
+		<div class="box"></div>
+		<div class="box"></div>
+		<div class="box"></div>
+	</div>
+	<div class="center">
+		<div class="box"></div>
+		<div class="box"></div>
+		<div class="box"></div>
+	</div>
 </body>
 </html>
